--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <!-- Font Awesome Icons -->
+    <script
+      src="https://kit.fontawesome.com/8e8567a727.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -34,7 +39,12 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
+          <button class="btn-primary btn-secondary">
+            <i class="fa-solid fa-phone"></i> Contact
+          </button>
         </div>
         <img src="images/hardy.png" alt="" />
       </div>
@@ -184,7 +194,9 @@
           </div>
         </div>
         <div class="resume-button">
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
         </div>
       </section>
     </main>
